# xilinx-upload-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  server.py  upload.py
src/: bitfile.cpp  bitfile.h  upload_module.cpp  uploader.cpp  uploader.h
static/: index.html  result.html
